# LeadGen

./: CONTEXT.md  LeadGen360 Documentation.html  journal_de_bord_PFE.docx
.claude/: settings.local.json
leadgen360/: .env.example  .gitignore  DOCUMENTATION.md  Makefile  README.md  cookieschaimasammoud270@gmail.com.jr  cookiesferjani.malek03@gmail.com.jr  docker-compose.yml  pyproject.toml
leadgen360/.claude/: settings.json
leadgen360/api/: Dockerfile  auth.py  main.py
leadgen360/api/routes/: classify.py  collect.py  generate.py  health.py  ingest.py
leadgen360/automation/: email_generator.py  llm_client.py  message_generator.py
leadgen360/collectors/: base.py  boamp.py  codeur.py  linkedin_b2b.py  linkedin_client.py  linkedin_hiring.py  malt.py  run_all.py  session_manager.py  ted.py  twago.py
leadgen360/config/: settings.py
leadgen360/db/: client.py  init.sql
leadgen360/db/queries/: companies.py  contacts.py  leads.py  opportunities.py
leadgen360/n8n_workflows/: 01_linkedin_hiring.json  02_boamp_rss.json  03_live_demo.json  04_collect_trigger.json
leadgen360/nlp/: classifier.py  evaluator.py  scorer.py  trainer.py
leadgen360/nlp/data/: training_data.py
leadgen360/nlp/reports/: evaluation_summary.json
leadgen360/pipeline/: enricher.py  ingest.py  scorer_rules.py
leadgen360/tests/: conftest.py  test_api.py  test_nlp.py  test_pipeline.py
rapport_pfe/: CONTEXT.md  Chapter1.aux  Chapter1.tex  Chapter2.aux  Chapter2.tex  Chapter3.aux  Chapter3.tex  Chapter4.aux  Chapter4.tex  Conclusion.aux  Conclusion.tex  Dedicaces.aux  Dedicaces.tex  Main.aux  (+24 more)
