[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leadgen360"
version = "1.0.0"
description = "LeadGen Francophone 360+ — Plateforme B2B lead generation pour Solvinya Group"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    # LinkedIn
    "linkedin-api>=2.1.1",
    # HTTP
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    # NLP
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    # Logging
    "loguru>=0.7.2",
    # Visualization
    "matplotlib>=3.9.0",
    # Async
    "anyio>=4.4.0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    # Misc
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
